# nuwro

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  Makefile  NN_README.md  README  README.md  README_ROOTEGPythia6.md  TODO  VERSION  flux  params.txt  setupROOTEGPythia6.sh
.github/workflows/: CDImage.yml  CIBuild.yml
data/: isotops.txt  kaskada.txt  params.txt  pfew.txt
data/beam/: ANL.txt  BNL.txt  BNL_olga.txt  FNAL.txt  K2K.txt  K2Kold.txt  MB.txt  MBnue.txt  MBnueb.txt  MBnumu.txt  MBnumub.txt  MBnumuto3GeV.txt  ND280.txt  NuMi-numu-2017.txt  NuMi_anu_100_10000.txt  NuMi_nu_100_10000.txt  NuMi_nu_100_100000.txt  NuMi_nu_1500_10000.txt  NuMianumu-ratio.txt  NuMinumu-ratio.txt  NuMinumu_daniel.txt  NuMinumu_joel.txt  NuMinumu_phil.txt  NuMinumubar_daniel.txt  T2Knue.txt  T2Knueb.txt  T2Knumu.txt  T2Knumub.txt  beams.txt  newMB.txt  newMB_anu.txt  newMBanti.txt  newMBnue.txt  newMBnueb.txt  newMBnumu.txt  newMBnumub.txt  newMBnumubar.txt  newNuMi_nu.txt  newNuMianumu.txt  newNuMinumu.txt  (+16 more)
data/data/: mb_ccpi0_mu_ek.txt  mb_ccpi0_pi_cos.txt  mb_ccpi0_pi_mom.txt  mb_ccpi0_q2.txt  mb_ccpi0_total.txt  mb_ccpip_mu_ek.txt  mb_ccpip_pi_ek.txt  mb_ccpip_q2.txt  mb_ccpip_total.txt  mb_ncel.txt  mb_ncel_ratio.txt  mb_ncpi0_pi_cos.txt  mb_ncpi0_pi_mom.txt
data/sf/: gsf_Ar40N.grid  pke12_tot.grid  pke16.grid
doc/: doc-nuwro.html
doc/Leitner/: nc-proton.tdg  ncq2-neutron-1GeVds=-0.15.txt  ncq2-proton-0.5GeVds=-0.15.txt  ncq2-proton-1GeVds=-0.15  nctotal-neutron-ds=-0.15.txt  nctotal-neutron-ds=0.txt  nctotal-proton-ds=-0.15.txt  nctotal-proton-ds=0.txt
doc/Leitner-cm2/: leitner.dvi  leitner.tex  leitner.tex~  nc-neutron-0-noEM.txt  nc-neutron-0.15-noEM.txt  nc-neutron.tdg  nc-proton-0-noEM.txt  nc-proton-0.15-noEM.txt  ncq2-neutron-0.5GeVds=-0.15.txt  nctotal-neutron-ds=-0.15.txt  nctotal-neutron-ds=0.txt  nctotal-proton-ds=-0.15.txt  nctotal-proton-ds=0.txt  nctotal.tdg  neutron.agr  neutron.eps  proton.agr  proton.eps  q2-neutron-1000.txt  q2-neutron-1500.txt  q2-neutron-500.txt  q2-neutron.agr  q2-neutron.eps  q2-proton-1000.txt  q2-proton-1500.txt  q2-proton-500.txt  q2-proton.agr  q2-proton.eps
doc/PRD/: PDRs.agr  PDRs.eps  PDRs.ps  PRD.agr  PRD.eps  PRDS.agr  PRDS.eps  PRDS.ps  q2Sanu.txt  q2Snu.txt  q2danu.txt  q2dnu.txt  q2sanu.txt  (+1 more)
src/: .gitignore  Analyser.h  Analyser1.h  CMakeLists.txt  DNN_event.cc  DNN_event.h  Doxyfile  Dpion_a3.h  Dpion_nov22.h  EnergyProfile.h  Interaction.cc  Interaction.h  MB_ratio_paper2.c  Nieves_MEC.h  Nieves_MEC_CC_C12.h  Nieves_MEC_CC_O16_nue_Panos.h  Nieves_MEC_CC_O16_numu_Panos.h  SuSA_MEC.h  UserAction.h  Utilities.cc  Utilities.h  analyser.h  anynucleus.cc  anynucleus.h  args.h  beam.cc  beam.h  beamHist.cc  beamHist.h  beamND280.cc  beamND280.h  beamRF.h  beamRF2.h  beam_atmo.h  beam_mixed.h  beam_mixedroothist.h  beam_nomad.cc  beam_prev.h  beam_singleroothist.h  beam_uniform.h  (+213 more)
src/MEC_data/C12/: C12_3p3h.h  C12_np.h  C12_pn.h  C12_pp.h
src/MEC_data/Ca40/: Ca40_3p3h.h  Ca40_np.h  Ca40_pn.h  Ca40_pp.h
src/MEC_data/O16/: O16_3p3h.h  O16_np.h  O16_pn.h  O16_pp.h
src/NeuralNetworks/: EmpericalFits.cc  EmpericalFits.h  NN.cc  NN.h
src/beam.old/: beam.cc  beam.h  beamHist.cc  beamHist.h  beamtest.cc  kaskada.cc  makeHist.h  narray.h  nd280stats.cc  nd280stats.h  rootf.h  test_beam_rf.cc  test_makehist.cc
src/dis/: LeptonMass.cc  LeptonMass.h  Makefile  alfa.cc  alfa.h  charge.cc  charge.h  delta.cc  delta.h  dis2res.cc  dis2res.h  dis_cc.h  dis_cc_neutron.cc  dis_cc_neutron.h  dis_cc_proton.cc  dis_cc_proton.h  dis_cr_sec.cc  dis_cr_sec.h  dis_nc.cc  dis_nc.h  disevent.cc  disevent.h  dishadr.cc  dishadr.h  disjednostki.h  disweight.cc  disweight.h  fragmentation.cc  fragmentation.h  fragmentation_cc.cc  fragmentation_cc.h  fragmentation_nc.cc  fragmentation_nc.h  grv94.h  grv94_bodek.cc  grv94_bodek.h  parameters.cc  parameters.h  pdg_name.h  res_kinematics.cc  (+15 more)
src/dis/unused/: delta_ff.cc  delta_new.cc  delta_old.cc  disevent_new.cc  disevent_old.cc
src/espp/: D4T.h  D4V.h  DM.cc  DM.h  constants.h  crossection.cc  crossection.h  main.cpp  makefile  util2.h
src/gui/: CBeamTab.cc  CBeamTab.h  CCoh.cc  CCoh.h  CElement.cc  CElement.h  CGeneralTab.cc  CGeneralTab.h  CKaskada.cc  CKaskada.h  CMainWindow.cc  CMainWindow.h  CPhysicsTab.cc  CPhysicsTab.h  CQel.cc  CQel.h  CRes.cc  CRes.h  CTargetTab.cc  CTargetTab.h  QtNuwro.cc
src/hybrid/: ABCDE.cc  ABCDE.h  CT_PF_PP.h  Calculations.cc  Calculations.h  Constants.h  D13.h  Delta_free.cc  Delta_free.h  Leptonic.cc  Leptonic.h  Matrix.cc  Matrix.h  NON-Resonant.cc  NON-Resonant.h  Operators.cc  Operators.h  P11.h  Regge_CPT.h  S11.h  diracMatrices.cc  diracMatrices.h  hybrid_gateway.cc  hybrid_gateway.h
src/rew/: PythiaQuiet.f  Reweighters.cc  Reweighters.h  rewNorm.cc  rewQEL.cc  rewRES.cc  reweight_along.cc  reweight_to.cc  rewparams.cc  rewparams.h
src/rew/validation/: parqel.txt  parres.txt  qel.c  qel.py  qel2.py  qel2_ratio.py  qel3.py  qel3_ratio.py  qel_ratio.py  res.c  res.py  res_ratio.py  runqel.sh  runres.sh
src/rpa/: FormFaktory.h  FormFaktoryHorowitz.h  Makefile  alfa_beta_LAM.h  calg.h  czesci_rzeczywiste.h  czesci_urojone.h  dens_test.cc  density_of_nucleus.h  flux_class.h  form_faktory_BBA_2003.h  form_faktory_Dipol.h  form_faktory_Dipol_long.h  form_faktory_bound.h  form_faktory_bound_long.h  form_faktory_rozdzielnik.h  form_faktory_rozdzielnik_long.h  jednostki.h  nnff.h  rpa_lib.cc  rpa_lib.h  stale_rpa.h  tablica_Mef.h
src/sf/: CGaussianSF.cc  CGaussianSF.h  CInterpolatedData.h  CInterpolatedData2D.h  CLorentzDistrib.h  CLorentzDistrib2.h  CMomDistrib.cc  CMomDistrib.h  CMomDistrib_C12_Ben.h  CMomDistrib_Ca40_CdA.h  CMomDistrib_Ca40_GCo.h  CMomDistrib_Ca48_GCo.h  CMomDistrib_Fe56_Ben.h  CMomDistrib_O16_Ben.h  CMomDistrib_O16_CdA.h  CMomDistrib_O16_GCo.h  CSFOptions.cc  CSFOptions.h  CSpectralFunc.cc  CSpectralFunc.h  CSpectralFunctions.h  CgridSpectralFunc.h  FormFactors.cc  FormFactors.h  GConstants.h  generatormt.h  gridfun2d.cc  gridfun2d.h  jednostki.h  new_sf_test.sh  pdg.h
src/sf/data/: gsf_Ar40P.grid  pke12_2024.table  pke56_tot.grid
(+126 files in other folders)
